--- a/css/main.css
+++ b/css/main.css
@@ -64,3 +64,11 @@ ul li { padding: 6px 8px; text-transform: uppercase; }
 .inprogress li:nth-child(odd) { background-color: rgba(255, 0, 0, 0.5)}
 
 .done li:nth-child(odd) { background-color: rgba(0, 255, 0, 0.5)}
+input [type="checkbox"] { margin-right: 8px;}
+
+
+
+input[type="checkbox"]:checked + span::after{
+    content: 'hello';
+   
+}
