--- a/css/main.css
+++ b/css/main.css
@@ -13,13 +13,13 @@ body {
     font-size: 16px;
     background-color: black;
 
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Times New Roman', Times, serif ;
     background-image: url(../images/ll.jpg);
     background-repeat: no-repeat;
     background-size:cover;
 
 
-    color: white;
+    color: rgb(10, 9, 9);
 }
 
 header > h1 { text-align:center; padding: 8px; }
