--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body {
     background-color: black;
 
     font-family:'Times New Roman', Times, serif ;
-    background-image: url(../images/ll.jpg);
+    background-image: url(../images/background_image.jpg);
     background-repeat: no-repeat;
     background-size:cover;
 
